--- a/introduce-project/src/module/addNote/addNote.scss
+++ b/introduce-project/src/module/addNote/addNote.scss
@@ -1,10 +1,27 @@
 .addNote{
-    padding-top: 50px;
-    .save{
-        display:block;
-        margin: auto;
-        height: 25px;
-        width: 50px;
-        border: 1px solid red;
+    // padding-top: 50px;
+    .input{
+        margin-top:0.2rem;
+        input{
+            margin-bottom:0.1rem;
+            width:70%;
+            height:0.5rem;
+            border:none;
+            border:1.5px solid #ccc; 
+        }
+        textarea{
+            width:70%;
+            min-height:1.5rem;
+            resize:none;
+        }
+        span{
+            display:block;
+            width:2rem;
+            margin:auto;
+            height:0.5rem;
+            line-height:0.5rem;
+            background:#ccc;
+            padding:0.05rem 0.15rem;
+        }
     }
 }
