--- a/introduce-project/src/module/diary/diary.scss
+++ b/introduce-project/src/module/diary/diary.scss
@@ -2,7 +2,10 @@
 	color:green;
 	.box{
 		width: 100%;
-		margin-top:50px;
+		// height: 300px;
+		overflow: auto;
+		flex-grow:2;
+		// margin-top:50px;
 		img{
 			display:block;
 			width: 100%;
