--- a/introduce-project/src/module/experience/experience.scss
+++ b/introduce-project/src/module/experience/experience.scss
@@ -2,4 +2,23 @@
 	.msg{
 		margin-top:50px;	
 	}
+    .lunbo{
+        span:nth-child(1) {
+            background: yellow;
+        }
+        
+        span:nth-child(2) {
+            background: blue;
+        }
+        
+        span:nth-child(3) {
+            background: pink;
+        }
+        span:nth-child(4) {
+            background: green;
+        }
+        .content{
+            /*margin: 20px;*/
+        }
+    }
 }
