--- a/introduce-project/src/module/friend/friend.scss
+++ b/introduce-project/src/module/friend/friend.scss
@@ -1,22 +1,74 @@
-.friend{
-	color:green;
-	a{
-		text-decoration:none;
-	}
-	p{
-		text-align:left;
-	}
-	#iframe{
-		width: 100%;
-		height:500px;
+.friend {
+	overflow-x:hidden;
+  // color:green;
+  a {
+    text-decoration: none;
+  }
+  .friendList {
+    text-align:left;
+    flex-grow:2;
+    overflow-y:auto;
+    overflow-x:hidden;
+    font-size:0.23rem;
+    // -webkit-overflow-scrolling:touch;
+    .listNum {
+      min-height: 50px;
+      background: #ccc;
+      position: relative;
+      // width: 70%;
+      padding: 5px 15px;
+      margin-bottom: 5px;
+      span {
+        position: absolute;
+        font-size: 10px;
+        right: 0.1rem;
+        top: 5px;
+        font-size:0.15rem;
+      }
+      p {
+        display: block;
+        font-family: "微软雅黑";
+        margin: 0;
+        // line-height: 25px;
 
+        margin-top: 5px;
+      }
+    }
+    .listNum:nth-child(odd) {
+      background: #eee;
+    }
+    .listNum:first-child {
+      // background: #eee;
+      // margin-top:5px;
+    }
+    
+  }
+  .content{
+    top:0;
+    width: 75%;
+    position: absolute;
+    z-index: 99999;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-top: 1.5rem;
+    textarea{
+      width:100%;
+      height:3rem;
+      resize:none;
+    }
+    input{
+      height:0.5rem;
+      border:none;
+      border:1.5px solid #ccc; 
+    }
+    span{
+        display:inline-block;
+        height:0.5rem;
+        line-height:0.5rem;
+        background:#ccc;
+        padding:0.05rem 0.15rem;
+        // background:none;
+    }
+  }
 
-	}
-	#mright{
-		display:flex;
-		justify-content:space-around;
-		>div{
-
-		}
-	}
 }
