--- a/introduce-project/src/module/index/index.scss
+++ b/introduce-project/src/module/index/index.scss
@@ -1,489 +1,29 @@
+@import '../../sass/public.scss';
 .app_main {
-  height:100%;
-  overflow-x:hidden;
-  .clear:after{
-    height:0;
-    content:'';
-    display:block;
-    clear:both;
-  }
-  .fixlogin{
-    position:fixed;
-    width:100%;
-    height:100%;
-    background:#eee;
-     z-index:998;
-     opacity:0.3;
-    
-  }
-  input{
-    font-size:0.15rem;
-    border-radius:0.05rem;
-  }
-  .loginBox{
-    height:30%;
-    width:50%;
-    padding:0.3rem;
-    background:#ccc;
-    position:absolute;
-    left:50%;
-    transform:translateX(-50%);
-    z-index:9999;
-    top:20%;
-    font-size:0.3rem;
-    span{
-      float:left;
-    }
-    input{
-      height:0.5rem;
-      width:65%;
-      border:2px solid #ccc;
-      margin-bottom:0.3rem;
-      float:right;
+  height: 100%;
+  display: flex;
+  flex-direction:column;
+  .headerTop{
 
-    }
-    .confirm{
-      padding:0.1rem 0.2rem;
-      height:0.5rem;
-      line-height:0.5rem;
-      width:1.3rem;
-      background:#a72126;
-      color:white;
-      margin-left:50%;
-      transform:translateX(-50%);
-      border-radius:0.1rem;
-
+  }
+  .message {
+    // margin-top: 1rem;
+    flex-grow:2;
+  }
+  .bottom {
+    width: 100%;
+    // position: fixed;
+    // bottom: 0;
+    display: flex;
+    // justify-content: space-around;
+    a {
+      flex-grow:1;
+      text-decoration: none;
+      width: 25%;
+      height: 0.6rem;
+      display: inline-block;
+      background-color: #ccc;
+      color: green;
     }
   }
-  
-  .left{
-    width:35%;
-    height:99%;
-    background:#f5f6f8;
-    display:inline-block;
-    float:left;
-    border-radius:0.2rem;
-    box-shadow:0 0.1rem 0.2rem black;
-    .top{
-      // height:30%;
-      .h2{
-        height:0.8rem;
-        line-height:0.8rem;
-        background:#a72126;
-        border-radius:0.2rem 0.2rem 0 0;
-        font-size:0.25rem;
-        color:#f2dede;
-        img{
-          height: 0.7rem;
-          width: 96%;
-          vertical-align: middle;
-        }
-      }
-      .login{
-        margin-top:0.1rem;
-          height:1rem;
-          line-height:1rem;
-          border-radius:1rem;
-          width:90%;
-          margin-left:5%;
-          background:#eaebec;
-          position:relative;
-          span:nth-child(1){
-            // float:left;
-            display:inline-block;
-            height:0.9rem;
-            width:0.9rem;
-            border:2px solid red;
-            border-radius:50%;
-            position:absolute;
-            left:0;
-            overflow:hidden;
-            img{
-              height:100%;
-              width:100%;
-            }
-          }
-          span:nth-child(2){
-            // display:inline-block;
-            float:left;
-            height:1rem;
-            line-height:1rem;
-            border-radius:1rem;
-            margin-left:1rem;
-            width:60%;
-            overflow:hidden;
-            text-overflow:ellipsis;
-            white-space:nowrap;
-            text-align:left;
-
-
-          }
-      }
-      .switch{
-          margin-top:0.3rem;
-          height:0.5rem;
-          line-height:0.5rem;
-          border-radius:0.5rem;
-          width:90%;
-          margin-left:5%;
-          background:#e78a05;
-          display:flex;
-          justify-content:space-around;
-          color:white;
-          span:nth-child(2){
-
-            display:inline-block;
-            width:32%;
-            border-left:2px solid #ababab;
-            border-right:2px solid #ababab;
-            img{
-                  vertical-align: middle;
-            }
-          }
-      }
-    }
-    .tab{
-      margin-top:0.1rem;
-      .active_tab{
-        color:red;
-      }
-      p{
-        line-height:0.7rem;
-        text-align:left;
-        padding-left:0.2rem;
-        border-top: 2px solid #ababab;
-      }
-      p:last-child{
-        border-bottom: 2px solid #ababab;
-      }
-    }
-    
-  }
-  .mid{
-    width:1.5%;
-    height:90%;
-    margin-top:5%;
-    background:#c2c9cf;
-    float:left;
-
-  }
-  .right{
-    width:63%;
-    height:99%;
-    background:#ffffff;
-    display:inline-block;
-    float:right;
-     border-radius:0.2rem;
-     box-shadow:0 0.1rem 0.2rem black;
-    .header{
-        height:0.8rem;
-        line-height:0.8rem;
-        background:#a72126;
-        border-radius:0.2rem 0.2rem 0 0;
-        display:flex;
-        justify-content:space-around;
-        color:white;
-        position: relative;
-        z-index: 99;
-        h2{
-          display:inline-block;
-          font-size:0.25rem;
-          color:white;
-          width:70%;
-        }
-        span{
-          display:inline-block;
-          width:10%;
-        }
-        .backImg{
-          vertical-align: middle;
-        }
-        .more{
-          vertical-align: middle;
-        }
-      }
-      .main{
-        width:100%;
-        height:90%;
-        float:left;
-        .card{
-          width:100%;
-          height:100%;
-          float:left;
-           color:#909090;
-           padding-left:0.1rem;
-          .mainLeft{
-            float:left;
-            width:55%;
-            .input{
-              height:0.7rem;
-              line-height:0.7rem;
-              width:100%;
-              float:left;
-             
-              text-align:left;
-              // padding-left:0.3rem;
-              span{
-                float:left;
-              }
-              input{
-                width:60%;
-                height:0.4rem;
-                margin-top:0.15rem;
-                border:2px solid #ccc;
-                float:right;
-              }
-            }
-          }
-          
-          .cardNo{
-            width:40%;
-            height:35%;
-            float:right;
-            color:white;
-            p{
-                height: 0.4rem;
-                line-height: 0.4rem;
-                width:70%;
-                background:#981d22;
-                margin:auto;
-                margin-top:0.15rem;
-                border-radius:0.1rem;
-            }
-            span{
-              width:70%;
-              height:60%;
-              display:inline-block;
-              border:4px solid #e5ac00;
-              margin-top:0.3rem;
-              img{
-                height:100%;
-                width:100%;
-              }
-            }
-          }
-          .address{
-            margin-top:0.2rem;
-            // padding-left:0.3rem;
-            height:1rem;
-            width:100%;
-            float:left;
-             text-align: left;
-            span{
-              float:left;
-              width:10%;
-              // height:100%;
-              // margin-right:1.5rem;
-            }
-            >div{
-              float:left;
-              width:85%;
-
-              input{
-                height:0.4rem;
-                border:2px solid #ccc;
-                float:left;
-            
-
-              }
-              input:nth-child(1){
-                    width:55%;
-              }
-              input:nth-child(3){
-                    width:25%;
-              }
-              span{
-                float:left;
-                margin-left:0.1rem;
-                color:black;
-              }
-              p{
-                float:left;
-              }
-            }
-
-          }
-          .send{
-             text-align: left;
-            margin-top:0.2rem;
-            // padding-left:0.3rem;
-            height:0.6rem;
-            width:100%;
-            float:left;
-            >span{
-              float:left;
-              margin-right:0.1rem;
-            }
-            >div{
-              float:left;
-              width:80%;
-              input{
-                height:0.4rem;
-                border:2px solid #ccc;
-                float:left;
-            
-
-              }
-              span{
-                float:left;
-                margin-right:0.1rem;
-              }
-              input:nth-child(1){
-                    width:35%;
-                    margin-right:0.1rem;
-              }
-              input:nth-child(3){
-                    width:40%;
-                    // margin-left:0.5rem;
-              }
-              
-            }
-          }
-          .name{
-            margin-top:0.2rem;
-            // padding-left:0.3rem;
-            height:0.6rem;
-            width:100%;
-            float:left;
-            >span{
-              float:left;
-              margin-right:0.1rem;
-            }
-            >div{
-              float:left;
-              width:80%;
-              input{
-                height:0.4rem;
-                border:2px solid #ccc;
-            
-
-              }
-              input:nth-child(1){
-                    width:50%;
-              }
-              input:nth-child(2){
-                    width:33%;
-                    margin-left:0.2rem;
-              }
-              
-            }
-          }
-          .next{
-            height:0.5rem;
-            line-height:0.5rem;
-            width:1.5rem;
-            border-radius:.1rem;
-            background:#df3114;
-            color:white;
-            position:fixed;
-            bottom:0.2rem;
-            left:68%;
-            transform: translateX(-50%);
-          }
-        }
-        .img{
-          height:100%;
-           .box{
-            display:flex;
-            flex-wrap:wrap;
-            justify-content:space-around;
-            height:86%;
-            margin-top:0.2rem;
-            .item{
-              width:40%;
-              height:40%;
-              // background:red;
-              span{
-                color:blue;
-                padding:0 .1rem;
-              }
-              img{
-                height:80%;
-                width:100%;
-                display:inline-block;
-              }
-            }
-           }
-           .btn{
-              height:0.5rem;
-              span{
-                display:inline-block;
-                width:1.6rem;
-                height: 0.5rem;
-                line-height: 0.5rem;
-                background:#df3114;
-                color:white;
-                margin-right:0.2rem;
-                border-radius:0.1rem;
-              }
-           }
-        }
-        .info{
-          padding-top:0.3rem;
-          height:100%;
-          .top{
-            width:90%;
-            margin-left:5%;
-            padding-top:0.5rem;
-            border-radius:0.2rem;
-            border:2px solid #ccc;
-            box-shadow: 0 0.1rem 0.2rem #ccc;
-            border-top: none;
-            position: relative;
-            top: -0.5rem;
-            >div{
-              padding-left:0.1rem;
-              height:0.5rem;
-              margin-bottom:0.15rem;
-              span{
-                float:left;
-                width:25%;
-                text-align:left;
-              }
-              input{
-                float:left;
-                width:65%;
-                height:0.4rem;
-                border:2px solid #ccc;
-              }
-              .last{
-                width:30%;
-              }
-            }
-          }
-          .sign{
-            // margin-top:0.4rem;
-            margin-bottom:0.1rem;
-            text-align:left;
-            margin-left:5%;
-          }
-          .board{
-            // position:relative;
-            width:100%;
-            height:30%;
-            background:#f6f6f6;
-            overflow:hidden;
-          
-          }
-          .btn{
-             height:0.5rem;
-             margin-top:0.2rem;
-             span{
-               display:inline-block;
-               width:1.6rem;
-               height: 0.5rem;
-               line-height: 0.5rem;
-               background:#df3114;
-               color:white;
-               margin-right:0.2rem;
-               border-radius:0.1rem;
-             }
-          }
-
-          
-        }
-      }
-  }
-  }
-
-
+}
