--- a/introduce-project/src/module/myNote/myNote.scss
+++ b/introduce-project/src/module/myNote/myNote.scss
@@ -1,7 +1,13 @@
 .myNote{
+  .noteList{
+    flex-grow:2;
+    overflow:auto;
+    height:100%;
+    // margin-top:0.2rem;
+    
+  }
     .list{
-        margin-top: 50px;
-        height: 300px;
+        // height: 300px;
     }
   ul{
   	li{
