--- a/src/module/index/index.scss
+++ b/src/module/index/index.scss
@@ -21,6 +21,7 @@
       text-decoration: none;
       width: 25%;
       height: 0.88rem;
+      line-height: 0.88rem;
       display: inline-block;
       background-color: #ccc;
       color: green;
