--- a/src/module/info/info.scss
+++ b/src/module/info/info.scss
@@ -10,6 +10,11 @@
     .button{
         margin-top:0.1rem;
     }
+    .forget{
+        text-align: right;
+        padding-right: 1rem;
+        color: blue;
+    }
     span{
         display:inline-block;
         height:0.5rem;
