--- a/src/module/index/index.scss
+++ b/src/module/index/index.scss
@@ -4,7 +4,14 @@
   display: flex;
   flex-direction:column;
   .headerTop{
-
+    .right{
+      display: inline-block;
+    }
+    .right:hover{
+        background: blue;
+        color: white;
+        cursor: pointer;
+      }
   }
   .content{
     margin-top: 1.9rem;
@@ -70,6 +77,8 @@
     margin-top: 4rem;
     left: 50%;
     transform:translateX(-50%);
+    background: #d1e0c5;
+    border-radius: .2rem;
     .textarea{
       height: 6rem;
       display: block;
