--- a/src/module/index/index.scss
+++ b/src/module/index/index.scss
@@ -3,6 +3,14 @@
   height: 100%;
   display: flex;
   flex-direction:column;
+  .bgpic{
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    z-index: -11;
+  }
   .headerTop{
     .right{
       display: inline-block;
@@ -22,10 +30,12 @@
       background: #ccc;
       display: flex;
       flex-direction: column;
+      opacity: 0.7;
       .top{
         display: flex;
         height: 1.5rem;
         align-items: center;
+        background: #eee;
         .name{
           padding-left: 0.2rem;
           flex-grow:2;
@@ -85,10 +95,14 @@
       width: 100%;
       margin-bottom: 0.2rem;
       resize:none;
+      background: none;
+      
     }
     input{
       display: inline-block;
       height: 1rem;
+      background: none;
+      border:1px solid red;
 
     }
     .btn{
