--- a/src/module/index/index.scss
+++ b/src/module/index/index.scss
@@ -12,10 +12,10 @@
     z-index: -11;
   }
   .headerTop{
-    .right{
+    .right_hover{
       display: inline-block;
     }
-    .right:hover{
+    .right_hover:hover{
         background: blue;
         color: white;
         cursor: pointer;
@@ -27,15 +27,17 @@
       width: 70%;
       margin: auto;
       margin-top: 0.1rem;
-      background: #ccc;
       display: flex;
       flex-direction: column;
       opacity: 0.7;
+      background: -webkit-linear-gradient(#a57676, #bdadad); /* Safari 5.1 - 6.0 */
+      background: -o-linear-gradient(#a57676, #bdadad); /* Opera 11.1 - 12.0 */
+      background: -moz-linear-gradient(#a57676, #bdadad); /* Firefox 3.6 - 15 */
+      background: linear-gradient(#a57676, #bdadad); /* 标准的语法（必须放在最后） */
       .top{
         display: flex;
         height: 1.5rem;
         align-items: center;
-        background: #eee;
         .name{
           padding-left: 0.2rem;
           flex-grow:2;
@@ -56,7 +58,7 @@
       }
     }
   }
-  .button{
+  .moveDown,.moveUp{
     position: fixed;
     right: 2rem;
     bottom: 2rem;
@@ -67,6 +69,9 @@
     padding: .2rem .3rem;
     color: white;
     font-size: .6rem;
+  }
+  .moveUp{
+    bottom: 4rem;
   }
   .mask{
     z-index: 999;
@@ -96,7 +101,7 @@
       margin-bottom: 0.2rem;
       resize:none;
       background: none;
-      
+
     }
     input{
       display: inline-block;
