--- a/src/components/Pheader.scss
+++ b/src/components/Pheader.scss
@@ -16,6 +16,8 @@
       // top: 0;
       // z-index: 9999;
       display: flex;
+      background: -webkit-linear-gradient(left, #a9a744, #20b12b);
+
       .left{
         width: 20%;
         height: 100%;
