贪吃蛇入口

--- a/src/module/index/index.scss
+++ b/src/module/index/index.scss
@@ -14,6 +14,7 @@
   .headerTop{
     .right_hover{
       display: inline-block;
+      margin: 0 10px;
     }
     .right_hover:hover{
         background: blue;
